--- a/grammar/grammar.vcxproj
+++ b/grammar/grammar.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="4_10.cpp" />
+    <ClCompile Include="4_14.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
