--- a/grammar/grammar.vcxproj.filters
+++ b/grammar/grammar.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="4_10.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="4_14.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
